# rmicrobit

./: CHANGELOG.md  Cargo.toml  LICENCE.txt  README.md  build.rs  memory.x  microbit.gdb
.cargo/: config
examples/: heartbeat.rs  scroll_images.rs  scroll_text.rs  use_core_buttons.rs  use_display_port.rs  use_dual_button_monitor.rs  use_single_button_monitor.rs
examples/demo/: animation.rs  buttons.rs  demo.rs  main.rs
src/: _doc_setup.rs  buttons.rs  display.rs  display_control.rs  display_timer.rs  doc_example.rs  font.rs  gpio.rs  graphics.rs  image.rs  lib.rs  microbit_control.rs  microbit_matrix.rs  microbit_timer.rs  prelude.rs  render.rs  scrolling.rs  scrolling_text.rs
src/buttons/: builtin.rs  core.rs  debouncing.rs
src/buttons/monitors/: dual.rs  dual_with_hold.rs  holding.rs  single.rs  single_with_hold.rs
src/display/: display_port.rs  doc_example.rs  matrix.rs  microbit_display.rs  timer.rs
src/font/: pendolino.rs
src/graphics/: font.rs  image.rs  scrolling.rs  scrolling_text.rs
src/graphics/font/: pendolino.rs
unit_tests/buttons/: dual_monitor_with_hold_tests.rs
