[package]
name = "rmicrobit"
version = "0.3.0"
edition = "2018"
description = "Drive the micro:bit 5×5 LED display."
authors = ["Matthew Woodcraft <matthew@woodcraft.me.uk>"]
documentation = "https://mjw.woodcraft.me.uk/2019-mb/rmicrobit/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mattheww/rmicrobit/"

[dependencies]
nrf51-hal = "^0.6.2"
tiny-led-matrix = "1.0"

[dev-dependencies]
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
cortex-m-rtfm = "0.4.3"
numtoa = "0.2.3"

[profile.release]
debug = true
