[package]
name = "rmicrobit"
version = "1.0.0"
edition = "2018"
description = "Drivers for the micro:bit 5×5 LED display and buttons."
authors = ["Matthew Woodcraft <matthew@woodcraft.me.uk>"]
documentation = "https://docs.rs/rmicrobit"
license = "MIT"
readme = "README.md"
keywords = ["microbit", "arm", "cortex-m", "nordic", "nrf51"]
repository = "https://github.com/mattheww/rmicrobit/"

[dependencies]
embedded-hal = "0.2.3"
nrf51-hal = "0.7.0"
tiny-led-matrix = "1.0"

[dev-dependencies]
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.0"
numtoa = "0.2.3"

[profile.release]
debug = true
